--- a/website/package.json
+++ b/website/package.json
@@ -33,6 +33,7 @@
     "@markuplint/jsx-parser": "^4.0.0-alpha.9",
     "@markuplint/react-spec": "^4.0.0-alpha.9",
     "@playwright/test": "^1.40.1",
+    "@tsconfig/docusaurus": "^2.0.1",
     "cspell": "^8.3.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
