--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,13 @@
     "site:start": "yarn site:prebuild; docusaurus start",
     "site:build": "yarn site:prebuild; docusaurus build",
     "site:prebuild": "node scripts/prebuild/index.mjs; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
-    "site:lint": "prettier --check './**/*{js,ts,tsx,mdx}' './*{json,rc,js}' --ignore-path .gitignore; eslint . --ext js,ts,jsx,tsx --ignore-path .gitignore; stylelint './**/*.css' --ignore-path .gitignore; cspell '**' --no-progress; textlint './i18n/ja'; markuplint '**/*.tsx';",
+    "site:lint": "run-p site:lint:*",
+    "site:lint:prettier": "prettier --check './**/*{js,ts,tsx,mdx}' './*{json,rc,js}' --ignore-path .gitignore",
+    "site:lint:eslint": "eslint . --ext js,ts,jsx,tsx --ignore-path .gitignore",
+    "site:lint:stylelint": "stylelint './**/*.css' --ignore-path .gitignore",
+    "site:lint:cspell": "cspell '**' --no-progress",
+    "site:lint:textlint": "textlint './i18n/ja'",
+    "site:lint:markuplint": "markuplint '**/*.tsx'",
     "site:screenshot": "playwright test tests/screenshot.spec.ts",
     "site:up": "yarn upgrade-interactive --latest"
   },
@@ -39,6 +45,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "markuplint": "^4.0.0-alpha.9",
+    "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
     "stylelint": "^16.1.0",
     "stylelint-config-recess-order": "^4.4.0",
