Fix lint command

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -110,12 +110,12 @@ jobs:
               run: |
                   cd website
                   ERROR=0
-                  site:lint:prettier || ERROR=1
-                  site:lint:eslint || ERROR=1
-                  site:lint:stylelint || ERROR=1
-                  site:lint:cspell || ERROR=1
-                  site:lint:textlint || ERROR=1
-                  site:lint:markuplint || ERROR=1
+                  yarn site:lint:prettier || ERROR=1
+                  yarn site:lint:eslint || ERROR=1
+                  yarn site:lint:stylelint || ERROR=1
+                  yarn site:lint:cspell || ERROR=1
+                  yarn site:lint:textlint || ERROR=1
+                  yarn site:lint:markuplint || ERROR=1
                   exit $ERROR
 
     visual-regression-test:
