--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -58,6 +58,16 @@
 			"rules": {
 				"unicorn/filename-case": 0
 			}
+		},
+		{
+			"files": ["./**/*.spec.ts", "./**/*.spec.tsx"],
+			"extends": ["plugin:vitest/recommended", "plugin:testing-library/react"]
+		},
+		{
+			"files": ["./vitest.config.ts"],
+			"rules": {
+				"import/no-default-export": 0
+			}
 		}
 	]
 }
