--- a/packages/@markuplint/smarty-parser/package.json
+++ b/packages/@markuplint/smarty-parser/package.json
@@ -21,8 +21,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "4.0.0-alpha.9",
-		"@markuplint/ml-ast": "4.0.0-alpha.9",
+		"@markuplint/html-parser": "4.0.0-alpha.9"
+	},
+	"devDependencies": {
 		"@markuplint/parser-utils": "4.0.0-alpha.9"
 	}
 }
