--- a/packages/@markuplint/html-parser/tsconfig.json
+++ b/packages/@markuplint/html-parser/tsconfig.json
@@ -3,16 +3,16 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src"
+		"rootDir": "./src",
 	},
 	"references": [
 		{
-			"path": "../ml-ast"
+			"path": "../ml-ast",
 		},
 		{
-			"path": "../parser-utils"
-		}
+			"path": "../parser-utils",
+		},
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
 }
