--- a/packages/@markuplint/html-spec/tsconfig.json
+++ b/packages/@markuplint/html-spec/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"extends": "../../../tsconfig.json",
 	"compilerOptions": {
-		"composite": true
+		"composite": true,
 	},
 	"references": [],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
 }
