--- a/packages/@markuplint/ml-core/tsconfig.json
+++ b/packages/@markuplint/ml-core/tsconfig.json
@@ -3,34 +3,34 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src"
+		"rootDir": "./src",
 	},
 	"references": [
 		{
-			"path": "../ml-ast"
+			"path": "../ml-ast",
 		},
 		{
-			"path": "../ml-config"
+			"path": "../ml-config",
 		},
 		{
-			"path": "../ml-spec"
+			"path": "../ml-spec",
 		},
 		{
-			"path": "../i18n"
+			"path": "../i18n",
 		},
 		{
-			"path": "../html-parser"
+			"path": "../html-parser",
 		},
 		{
-			"path": "../html-spec"
+			"path": "../html-spec",
 		},
 		{
-			"path": "../parser-utils"
+			"path": "../parser-utils",
 		},
 		{
-			"path": "../selector"
-		}
+			"path": "../selector",
+		},
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
 }
