--- a/packages/@markuplint/ml-spec/tsconfig.json
+++ b/packages/@markuplint/ml-spec/tsconfig.json
@@ -3,19 +3,19 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src"
+		"rootDir": "./src",
 	},
 	"references": [
 		{
-			"path": "../ml-ast"
+			"path": "../ml-ast",
 		},
 		{
-			"path": "../test-tools"
+			"path": "../test-tools",
 		},
 		{
-			"path": "../types"
-		}
+			"path": "../types",
+		},
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
 }
