--- a/packages/@markuplint/react-spec/tsconfig.json
+++ b/packages/@markuplint/react-spec/tsconfig.json
@@ -3,13 +3,13 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src"
+		"rootDir": "./src",
 	},
 	"references": [
 		{
-			"path": "../ml-spec"
-		}
+			"path": "../ml-spec",
+		},
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "./test/**/*.spec.ts"]
+	"exclude": ["node_modules", "./test/**/*.spec.ts"],
 }
