--- a/playground/package.json
+++ b/playground/package.json
@@ -32,7 +32,9 @@
 		"@iconify-json/majesticons": "^1.1.11",
 		"@markuplint/jsx-parser": "^4.0.0-alpha.5",
 		"@markuplint/react-spec": "^4.0.0-alpha.5",
+		"@testing-library/jest-dom": "^6.2.0",
 		"@testing-library/react": "^14.1.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@types/json-schema": "^7.0.15",
 		"@types/react": "^18.2.45",
@@ -40,6 +42,7 @@
 		"@types/semver": "^7.5.6",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.14",
+		"canvas": "^2.11.2",
 		"cspell": "^8.3.2",
 		"eslint": "^8.56.0",
 		"eslint-plugin-react": "^7.32.2",
