Replace `@astrojs/parser` with `@astrojs/compiler` for type

--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -21,9 +21,11 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@astrojs/parser": "0.22.2",
 		"@markuplint/ml-ast": "4.0.0-alpha.9",
 		"@markuplint/parser-utils": "4.0.0-alpha.9",
 		"astro-eslint-parser": "^0.16.2"
+	},
+	"devDependencies": {
+		"@astrojs/compiler": "^2.5.0"
 	}
 }
