--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -157,15 +157,14 @@ jobs:
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   script: |
-                      core.info(`context.workflow: ${JSON.stringify(context.workflow)}`);
-                      core.info(`base: ${JSON.stringify(context.payload.pull_request.base)}`);
+                      console.log(context);
 
                       // get all workflow runs in target branch
                       const runs = await github.rest.actions.listWorkflowRuns({
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          workflow_id: context.workflow,
-                          // branch: context.payload.pull_request.base.ref,
+                          workflow_id: context.workflow_id,
+                          branch: context.payload.pull_request.base.ref,
                       });
                       core.info(`runs: ${JSON.stringify(runs)}`);
 
