--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -157,13 +157,13 @@ jobs:
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   script: |
-                      console.log(context);
+                      console.log(context.payload.workflow_run.id);
 
                       // get all workflow runs in target branch
                       const runs = await github.rest.actions.listWorkflowRuns({
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          workflow_id: context.workflow_id,
+                          workflow_id: context.payload.workflow_run.id,
                           branch: context.payload.pull_request.base.ref,
                       });
                       core.info(`runs: ${JSON.stringify(runs)}`);
