--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -153,34 +153,8 @@ jobs:
             - name: Capture screenshots
               run: cd website && yarn site:screenshot
 
-            - uses: actions/github-script@v7
-              id: get-target-hash
-              if: github.event_name == 'pull_request'
+            - name: Upload screenshots
+              uses: actions/upload-artifact@v2
               with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-                  result-encoding: string
-                  script: |
-                      const runs = await github.rest.actions.listWorkflowRuns({
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          workflow_id: 'website.yml',
-                          branch: context.payload.pull_request.base.ref,
-                      });
-                      if (runs.data.workflow_runs.length === 0) {
-                          return context.payload.pull_request.base.sha;
-                      } else {
-                          return runs.data.workflow_runs[0].head_sha;
-                      }
-
-            - uses: reg-viz/reg-actions@v2
-              if: github.event_name == 'pull_request'
-              with:
-                  github-token: '${{ secrets.GITHUB_TOKEN }}'
-                  image-directory-path: './website/__screenshots__'
-                  target-hash: '${{ steps.get-target-hash.outputs.result }}'
-
-            - uses: reg-viz/reg-actions@v2
-              if: github.event_name != 'pull_request'
-              with:
-                  github-token: '${{ secrets.GITHUB_TOKEN }}'
-                  image-directory-path: './website/__screenshots__'
+                  name: website-screenshots
+                  path: website/__screenshots__
