--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -7,7 +7,7 @@ on:
         paths:
             - 'website/**'
             - '.github/workflows/website.yml'
-    push: # for artifact and cache saving
+    push: # for cache saving
         branches:
             - dev
         paths:
@@ -117,44 +117,3 @@ jobs:
                   yarn site:lint:textlint || ERROR=1
                   yarn site:lint:markuplint || ERROR=1
                   exit $ERROR
-
-    visual-regression-test:
-        needs: dev-setup
-        runs-on: ${{ matrix.os }}
-        strategy:
-            fail-fast: false
-            matrix:
-                os: [ubuntu-latest]
-        steps:
-            - uses: actions/checkout@v4
-
-            - name: Use Node.js ${{ env.NODE_BUILD_VERSION }}
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ env.NODE_BUILD_VERSION }}
-
-            - name: Cache restore website dependencies
-              uses: actions/cache/restore@v3
-              with:
-                  path: 'website/node_modules'
-                  key: website-depends-${{ matrix.os }}-node${{ env.NODE_BUILD_VERSION }}-${{ hashFiles('website/yarn.lock') }}
-                  restore-keys: |
-                      website-depends-${{ matrix.os }}-node${{ env.NODE_BUILD_VERSION }}-
-
-            - name: Cache playwright binaries
-              uses: actions/cache@v3
-              with:
-                  path: ~/.cache/ms-playwright
-                  key: ${{ runner.os }}-playwright-${{ hashFiles('website/yarn.lock') }}
-
-            - name: Install Playwright Browsers
-              run: npx playwright install --with-deps chromium
-
-            - name: Capture screenshots
-              run: cd website && yarn site:screenshot
-
-            - name: Upload screenshots
-              uses: actions/upload-artifact@v2
-              with:
-                  name: website-screenshots
-                  path: website/__screenshots__
