--- a/.github/workflows/website-comment.yml
+++ b/.github/workflows/website-comment.yml
@@ -25,6 +25,8 @@ jobs:
                 os: [ubuntu-latest]
         steps:
             - uses: actions/checkout@v4
+              with:
+                  ref: ${{ github.event.pull_request.head.sha }}
 
             - name: Use Node.js ${{ env.NODE_BUILD_VERSION }}
               uses: actions/setup-node@v4
@@ -53,7 +55,34 @@ jobs:
             - name: Capture screenshots
               run: cd website && yarn site:screenshot
 
+            - uses: actions/github-script@v7
+              id: get-target-hash
+              if: github.event_name == 'pull_request_target'
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  result-encoding: string
+                  script: |
+                      const runs = await github.rest.actions.listWorkflowRuns({
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          workflow_id: 'website-comment.yml',
+                          branch: context.payload.pull_request.base.ref,
+                      });
+                      if (runs.data.workflow_runs.length === 0) {
+                          return context.payload.pull_request.base.sha;
+                      } else {
+                          return runs.data.workflow_runs[0].head_sha;
+                      }
+
             - uses: reg-viz/reg-actions@v2
+              if: github.event_name == 'pull_request_target'
+              with:
+                  github-token: '${{ secrets.GITHUB_TOKEN }}'
+                  image-directory-path: './website/__screenshots__'
+                  target-hash: '${{ steps.get-target-hash.outputs.result }}'
+
+            - uses: reg-viz/reg-actions@v2
+              if: github.event_name != 'pull_request_target'
               with:
                   github-token: '${{ secrets.GITHUB_TOKEN }}'
                   image-directory-path: './website/__screenshots__'
