--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -31,6 +31,7 @@
 		"@markuplint/ml-spec": "4.0.0-alpha.10",
 		"@markuplint/types": "4.0.0-alpha.10",
 		"@types/uuid": "^9.0.8",
+		"debug": "^4.3.4",
 		"espree": "^10.0.0",
 		"type-fest": "^4.10.1",
 		"uuid": "^9.0.1"
