--- a/packages/@markuplint/spec-generator/package.json
+++ b/packages/@markuplint/spec-generator/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/spec-generator",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "Generates @markuplint/html-spec",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -30,8 +30,8 @@
 		"strip-json-comments": "^5.0.1"
 	},
 	"devDependencies": {
-		"@markuplint/ml-spec": "4.0.0-alpha.12",
-		"@markuplint/test-tools": "4.0.0-alpha.12",
+		"@markuplint/ml-spec": "4.0.0-rc.0",
+		"@markuplint/test-tools": "4.0.0-rc.0",
 		"@types/cli-progress": "^3.11.5",
 		"type-fest": "^4.10.2"
 	}
