--- a/packages/@markuplint/cli-utils/package.json
+++ b/packages/@markuplint/cli-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/cli-utils",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "Utilities for CLI of Markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
