--- a/packages/@markuplint/ml-ast/package.json
+++ b/packages/@markuplint/ml-ast/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-ast",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "The markuplint AST types.",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
