--- a/packages/@markuplint/nunjucks-parser/package.json
+++ b/packages/@markuplint/nunjucks-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/nunjucks-parser",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "Nunjucks template parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,9 +21,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "4.0.0-alpha.12"
+		"@markuplint/html-parser": "4.0.0-rc.0"
 	},
 	"devDependencies": {
-		"@markuplint/parser-utils": "4.0.0-alpha.12"
+		"@markuplint/parser-utils": "4.0.0-rc.0"
 	}
 }
