--- a/packages/@markuplint/react-spec/package.json
+++ b/packages/@markuplint/react-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/react-spec",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "Extended specification for tags and attributes in React",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,7 +21,7 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "4.0.0-alpha.12"
+		"@markuplint/ml-spec": "4.0.0-rc.0"
 	},
 	"peerDependencies": {
 		"@markuplint/ml-core": ">3"
