--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "4.0.0-alpha.12",
+	"version": "4.0.0-rc.0",
 	"description": "Built-in rules of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -25,12 +25,12 @@
 		"./lib/permitted-contents/debug.js": "./lib/permitted-contents/debug.browser.js"
 	},
 	"dependencies": {
-		"@markuplint/html-spec": "4.0.0-alpha.12",
-		"@markuplint/ml-core": "4.0.0-alpha.12",
-		"@markuplint/ml-spec": "4.0.0-alpha.12",
-		"@markuplint/selector": "4.0.0-alpha.12",
-		"@markuplint/shared": "4.0.0-alpha.12",
-		"@markuplint/types": "4.0.0-alpha.12",
+		"@markuplint/html-spec": "4.0.0-rc.0",
+		"@markuplint/ml-core": "4.0.0-rc.0",
+		"@markuplint/ml-spec": "4.0.0-rc.0",
+		"@markuplint/selector": "4.0.0-rc.0",
+		"@markuplint/shared": "4.0.0-rc.0",
+		"@markuplint/types": "4.0.0-rc.0",
 		"@types/debug": "^4.1.12",
 		"@ungap/structured-clone": "^1.2.0",
 		"ansi-colors": "^4.1.3",
