--- a/playground/package.json
+++ b/playground/package.json
@@ -12,11 +12,11 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.18",
-		"@markuplint/parser-utils": "4.0.0-dev.28",
+		"@markuplint/parser-utils": "4.0.0-rc.0",
 		"@monaco-editor/react": "^4.5.0",
 		"@webcontainer/api": "^1.1.9",
 		"lz-string": "^1.5.0",
-		"markuplint": "^4.0.0-alpha.9",
+		"markuplint": "^4.0.0-rc.0",
 		"monaco-editor": "^0.45.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -26,14 +26,14 @@
 		"xterm": "^5.3.0"
 	},
 	"devDependencies": {
-		"@egoist/tailwindcss-icons": "^1.7.2",
+		"@egoist/tailwindcss-icons": "^1.7.4",
 		"@iconify-json/heroicons-solid": "^1.1.11",
 		"@iconify-json/majesticons": "^1.1.11",
-		"@markuplint/jsx-parser": "^4.0.0-alpha.9",
-		"@markuplint/react-spec": "^4.0.0-alpha.9",
+		"@markuplint/jsx-parser": "^4.0.0-rc.0",
+		"@markuplint/react-spec": "^4.0.0-rc.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@types/json-schema": "^7.0.15",
-		"@types/react": "^18.2.48",
+		"@types/react": "^18.2.52",
 		"@types/react-dom": "^18.2.18",
 		"@types/semver": "^7.5.6",
 		"@vitejs/plugin-react": "^4.2.1",
