--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,7 @@
     "@docusaurus/plugin-client-redirects": "^3.1.1",
     "@docusaurus/preset-classic": "^3.1.1",
     "@docusaurus/remark-plugin-npm2yarn": "^3.1.1",
-    "@markuplint/rules": "^4.0.0-alpha.9",
+    "@markuplint/rules": "^4.0.0-rc.0",
     "@mdx-js/react": "3.0.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
@@ -33,7 +33,7 @@
     "@imgix/js-core": "^3.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "stylelint": "^16.2.0",
+    "stylelint": "^16.2.1",
     "stylelint-config-recess-order": "^4.4.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
