--- a/packages/@markuplint/svelte-spec/package.json
+++ b/packages/@markuplint/svelte-spec/package.json
@@ -1,12 +1,17 @@
 {
 	"name": "@markuplint/svelte-spec",
-	"version": "3.2.0",
+	"version": "4.0.0-rc.1",
 	"description": "Extended specification for tags and attributes in Svelte",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
 	"license": "MIT",
 	"private": false,
-	"main": "lib/index.js",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js"
+		}
+	},
 	"types": "lib/index.d.ts",
 	"publishConfig": {
 		"access": "public"
@@ -16,9 +21,6 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "3.14.0"
-	},
-	"peerDependencies": {
-		"@markuplint/ml-core": "3.x"
+		"@markuplint/ml-spec": "4.0.0-rc.1"
 	}
 }
