--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-parser",
-	"version": "4.0.0-rc.1",
+	"version": "4.0.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -25,8 +25,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "4.0.0-rc.1",
-		"@markuplint/parser-utils": "4.0.0-rc.1",
+		"@markuplint/ml-ast": "4.0.0",
+		"@markuplint/parser-utils": "4.0.0",
 		"parse5": "7.1.2",
 		"type-fest": "^4.10.2"
 	}
