--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-spec",
-	"version": "4.0.0-rc.1",
+	"version": "4.0.0",
 	"description": "Types and schema that specs of the Markup languages for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -32,14 +32,14 @@
 		"schema:prettier": "prettier --write \"./schemas/*.json\" \"./src/types/*.ts\" --log-level warn"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "4.0.0-rc.1",
-		"@markuplint/types": "4.0.0-rc.1",
+		"@markuplint/ml-ast": "4.0.0",
+		"@markuplint/types": "4.0.0",
 		"dom-accessibility-api": "^0.6.3",
 		"is-plain-object": "^5.0.0",
 		"type-fest": "^4.10.2"
 	},
 	"devDependencies": {
-		"@markuplint/test-tools": "4.0.0-rc.1",
+		"@markuplint/test-tools": "4.0.0",
 		"json-schema-to-typescript": "13.1.2"
 	}
 }
