--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/types",
-	"version": "4.0.0-rc.1",
+	"version": "4.0.0",
 	"description": "Type declaration and value checker",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
