--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "4.0.0-rc.1",
+	"version": "4.0.0",
 	"description": "An HTML linter for all markup developers",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -25,17 +25,17 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/cli-utils": "4.0.0-rc.1",
-		"@markuplint/file-resolver": "4.0.0-rc.1",
-		"@markuplint/html-parser": "4.0.0-rc.1",
-		"@markuplint/html-spec": "4.0.0-rc.1",
-		"@markuplint/i18n": "4.0.0-rc.1",
-		"@markuplint/ml-ast": "4.0.0-rc.1",
-		"@markuplint/ml-config": "4.0.0-rc.1",
-		"@markuplint/ml-core": "4.0.0-rc.1",
-		"@markuplint/ml-spec": "4.0.0-rc.1",
-		"@markuplint/rules": "4.0.0-rc.1",
-		"@markuplint/shared": "4.0.0-rc.1",
+		"@markuplint/cli-utils": "4.0.0",
+		"@markuplint/file-resolver": "4.0.0",
+		"@markuplint/html-parser": "4.0.0",
+		"@markuplint/html-spec": "4.0.0",
+		"@markuplint/i18n": "4.0.0",
+		"@markuplint/ml-ast": "4.0.0",
+		"@markuplint/ml-config": "4.0.0",
+		"@markuplint/ml-core": "4.0.0",
+		"@markuplint/ml-spec": "4.0.0",
+		"@markuplint/rules": "4.0.0",
+		"@markuplint/shared": "4.0.0",
 		"@types/debug": "^4.1.12",
 		"chokidar": "^3.5.3",
 		"debug": "^4.3.4",
