--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@markuplint/website",
   "description": "https://markuplint.dev",
-  "version": "2.6.0",
+  "version": "4.0.0",
   "private": true,
   "scripts": {
     "site:start": "yarn site:prebuild; docusaurus start",
@@ -17,7 +17,7 @@
     "@docusaurus/plugin-client-redirects": "^3.1.1",
     "@docusaurus/preset-classic": "^3.1.1",
     "@docusaurus/remark-plugin-npm2yarn": "^3.1.1",
-    "@markuplint/rules": "^4.0.0-rc.0",
+    "@markuplint/rules": "4",
     "@mdx-js/react": "3.0.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
