--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "run-p lint:*",
+		"lint": "run-s lint:*",
 		"lint:eslint": "eslint --fix \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint:prettier": "prettier --write \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
 		"lint:spellcheck": "cspell --no-progress --show-suggestions \"**\"",
@@ -85,8 +85,8 @@
 		"lerna": "^8.0.2",
 		"lint-staged": "^15.2.1",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^3.2.4",
-		"textlint": "13.4.1",
+		"prettier": "^3.2.5",
+		"textlint": "14.0.1",
 		"textlint-filter-rule-comments": "^1.2.2",
 		"textlint-rule-preset-ja-spacing": "^2.3.0",
 		"textlint-rule-preset-ja-technical-writing": "^10.0.1",
