--- a/packages/@markuplint/create-rule/scaffold/package/tsconfig.json
+++ b/packages/@markuplint/create-rule/scaffold/package/tsconfig.json
@@ -13,8 +13,8 @@
 		"lib": ["dom", "es2015", "es2016", "es2017", "es2018", "es2019", "esnext"],
 		"skipLibCheck": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
+		"rootDir": "./src"
 	},
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
