--- a/packages/@markuplint/ml-ast/tsconfig.json
+++ b/packages/@markuplint/ml-ast/tsconfig.json
@@ -3,8 +3,8 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
+		"rootDir": "./src"
 	},
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
