--- a/packages/@markuplint/pug-parser/tsconfig.json
+++ b/packages/@markuplint/pug-parser/tsconfig.json
@@ -3,19 +3,19 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
+		"rootDir": "./src"
 	},
 	"references": [
 		{
-			"path": "../html-parser",
+			"path": "../html-parser"
 		},
 		{
-			"path": "../ml-ast",
+			"path": "../ml-ast"
 		},
 		{
-			"path": "../parser-utils",
-		},
+			"path": "../parser-utils"
+		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
