--- a/packages/@markuplint/rule-textlint/tsconfig.json
+++ b/packages/@markuplint/rule-textlint/tsconfig.json
@@ -3,13 +3,13 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
+		"rootDir": "./src"
 	},
 	"references": [
 		{
-			"path": "../ml-core",
-		},
+			"path": "../ml-core"
+		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
