--- a/packages/@markuplint/rules/tsconfig.json
+++ b/packages/@markuplint/rules/tsconfig.json
@@ -3,28 +3,28 @@
 	"compilerOptions": {
 		"composite": true,
 		"outDir": "./lib",
-		"rootDir": "./src",
+		"rootDir": "./src"
 	},
 	"references": [
 		{
-			"path": "../ml-core",
+			"path": "../ml-core"
 		},
 		{
-			"path": "../ml-spec",
+			"path": "../ml-spec"
 		},
 		{
-			"path": "../html-spec",
+			"path": "../html-spec"
 		},
 		{
-			"path": "../selector",
+			"path": "../selector"
 		},
 		{
-			"path": "../shared",
+			"path": "../shared"
 		},
 		{
-			"path": "../types",
-		},
+			"path": "../types"
+		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"],
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
