Update lint script

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "run-s lint:*",
+		"lint": "run-s lint:eslint lint:prettier lint:spellcheck lint:github-actions",
 		"lint:eslint": "eslint --fix \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint:prettier": "prettier --write \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
 		"lint:spellcheck": "cspell --no-progress --show-suggestions \"**\"",
 		"lint:github-actions": "actionlint .github/workflows/*.yml",
-		"lint-check": "run-p lint-check:* lint:spellcheck",
+		"lint-check": "run-s lint-check:eslint lint-check:prettier lint:spellcheck",
 		"lint-check:eslint": "eslint \"./packages/**/*.{ts,mjs,cjs,spec.js}\"",
 		"lint-check:prettier": "prettier --check \"./packages/**/*.{ts,tsx,js,cjs,mjs,json,rc,md}\" --log-level warn",
 		"up": "run-s up:deps up:gen up:schema",
