--- a/website/.gitignore
+++ b/website/.gitignore
@@ -27,6 +27,7 @@ i18n/ja/docusaurus-plugin-content-docs/current/rules/*.md
 
 # Copied
 community/contributing.md
+community/code-of-conduct.md
 
 # Env
 .env
