--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -23,9 +23,9 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "4.0.1",
 		"@markuplint/parser-utils": "4.2.0",
-		"astro-eslint-parser": "^0.16.2"
+		"astro-eslint-parser": "0.16.3"
 	},
 	"devDependencies": {
-		"@astrojs/compiler": "^2.6.0"
+		"@astrojs/compiler": "2.7.0"
 	}
 }
