--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -28,6 +28,6 @@
 		"@markuplint/ml-ast": "4.0.1",
 		"@markuplint/parser-utils": "4.2.0",
 		"parse5": "7.1.2",
-		"type-fest": "^4.10.2"
+		"type-fest": "4.12.0"
 	}
 }
