--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -27,10 +27,10 @@
 		"@markuplint/ml-ast": "4.0.1",
 		"@markuplint/selector": "4.2.0",
 		"@markuplint/shared": "4.0.1",
-		"@types/mustache": "^4.2.5",
-		"deepmerge": "^4.3.1",
-		"is-plain-object": "^5.0.0",
-		"mustache": "^4.2.0",
-		"type-fest": "^4.10.2"
+		"@types/mustache": "4.2.5",
+		"deepmerge": "4.3.1",
+		"is-plain-object": "5.0.0",
+		"mustache": "4.2.0",
+		"type-fest": "4.12.0"
 	}
 }
