--- a/vscode/package.json
+++ b/vscode/package.json
@@ -110,20 +110,20 @@
 	},
 	"devDependencies": {
 		"@markuplint/file-resolver": "4.3.0",
-		"@types/mocha": "^10.0.6",
+		"@types/mocha": "10.0.6",
 		"@types/node": "18.15",
 		"@types/semver": "7.5.8",
 		"@types/vscode": "1.87.0",
-		"@vscode/test-electron": "^2.3.9",
+		"@vscode/test-electron": "2.3.9",
 		"@vscode/vsce": "2.24.0",
 		"typescript": "5.4.3"
 	},
 	"dependencies": {
 		"@markuplint/esm-adapter": "4.0.1",
-		"debug": "^4.3.4",
-		"glob": "^10.3.10",
+		"debug": "4.3.4",
+		"glob": "10.3.10",
 		"markuplint": "4.3.0",
-		"mocha": "^10.3.0",
+		"mocha": "10.3.0",
 		"semver": "7.6.0",
 		"vscode-languageclient": "9.0.1",
 		"vscode-languageserver": "9.0.1",
