--- a/packages/@markuplint/config-presets/package.json
+++ b/packages/@markuplint/config-presets/package.json
@@ -13,8 +13,8 @@
 		"build": "node build.mjs"
 	},
 	"devDependencies": {
-		"glob": "^10.3.6",
-		"jsonc-parser": "^3.2.1",
-		"mustache": "^4.2.0"
+		"glob": "10.3.6",
+		"jsonc-parser": "3.2.1",
+		"mustache": "4.2.0"
 	}
 }
