--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -37,9 +37,9 @@
 		"@markuplint/ml-spec": "4.1.0",
 		"@markuplint/parser-utils": "4.2.0",
 		"@markuplint/selector": "4.2.0",
-		"@types/debug": "^4.1.12",
-		"debug": "^4.3.4",
-		"is-plain-object": "^5.0.0",
-		"type-fest": "^4.14.0"
+		"@types/debug": "4.1.12",
+		"debug": "4.3.4",
+		"is-plain-object": "5.0.0",
+		"type-fest": "4.14.0"
 	}
 }
