--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -34,9 +34,9 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "4.0.1",
 		"@markuplint/types": "4.0.2",
-		"dom-accessibility-api": "^0.6.3",
-		"is-plain-object": "^5.0.0",
-		"type-fest": "^4.14.0"
+		"dom-accessibility-api": "0.6.3",
+		"is-plain-object": "5.0.0",
+		"type-fest": "4.14.0"
 	},
 	"devDependencies": {
 		"@markuplint/test-tools": "4.1.0",
