--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -30,10 +30,10 @@
 		"@markuplint/ml-ast": "4.0.1",
 		"@markuplint/ml-spec": "4.1.0",
 		"@markuplint/types": "4.0.2",
-		"@types/uuid": "^9.0.8",
-		"debug": "^4.3.4",
-		"espree": "^10.0.1",
-		"type-fest": "^4.14.0",
-		"uuid": "^9.0.1"
+		"@types/uuid": "9.0.8",
+		"debug": "4.3.4",
+		"espree": "10.0.1",
+		"type-fest": "4.14.0",
+		"uuid": "9.0.1"
 	}
 }
