--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -31,11 +31,11 @@
 		"@markuplint/selector": "4.2.0",
 		"@markuplint/shared": "4.0.1",
 		"@markuplint/types": "4.0.2",
-		"@types/debug": "^4.1.12",
-		"@ungap/structured-clone": "^1.2.0",
-		"ansi-colors": "^4.1.3",
-		"chrono-node": "^2.7.5",
-		"debug": "^4.3.4",
-		"type-fest": "^4.14.0"
+		"@types/debug": "4.1.12",
+		"@ungap/structured-clone": "1.2.0",
+		"ansi-colors": "4.1.3",
+		"chrono-node": "2.7.5",
+		"debug": "4.3.4",
+		"type-fest": "4.14.0"
 	}
 }
