Fix dependencies for test

--- a/packages/@markuplint/esm-adapter/package.json
+++ b/packages/@markuplint/esm-adapter/package.json
@@ -22,8 +22,6 @@
 		"strict-event-emitter": "0.5.1"
 	},
 	"devDependencies": {
-		"@types/debug": "4.1.12",
-		"default-markuplint": "npm:markuplint@latest",
-		"test-markuplint": "npm:markuplint@latest"
+		"@types/debug": "4.1.12"
 	}
 }
